--- a/force-app/main/default/classes/NebulaLoggerWrapper_Test.cls
+++ b/force-app/main/default/classes/NebulaLoggerWrapper_Test.cls
@@ -4,14 +4,16 @@ private class NebulaLoggerWrapper_Test {
     private static final String EXCEPTION_MESSAGE = 'Unique exception message for testing purposes';
     private static String methodExecuted;
     private static Object param;
+    private static String message;
 
     @isTest
     static void testExceptionRethrowWhenNoLogger() {
         TestUtility.ALLOW_LOGGING = true;
         NebulaLoggerWrapper.logger = null;
-        try{
-            NebulaLoggerWrapper.call(
+        try {
+            NebulaLoggerWrapper.log(
                 NebulaLoggerWrapper.Method.RUN_EXCEPTION,
+                EXCEPTION_MESSAGE,
                 NebulaLoggerWrapper.DataType.TYPE_EXCEPTION,
                 new TestUtility.GenericTestingException(EXCEPTION_MESSAGE)
             );
@@ -25,7 +27,7 @@ private class NebulaLoggerWrapper_Test {
     static void testRunInfo() {
         TestUtility.ALLOW_LOGGING = true;
         NebulaLoggerWrapper.logger = new CallableTestLogger();
-        NebulaLoggerWrapper.call(NebulaLoggerWrapper.Method.RUN_INFO);
+        NebulaLoggerWrapper.log(NebulaLoggerWrapper.Method.RUN_INFO);
         System.Assert.areEqual(NebulaLoggerWrapper.NEW_ENTRY, methodExecuted);
     }
 
@@ -33,44 +35,64 @@ private class NebulaLoggerWrapper_Test {
     static void testRunError() {
         TestUtility.ALLOW_LOGGING = true;
         NebulaLoggerWrapper.logger = new CallableTestLogger();
-        NebulaLoggerWrapper.call(NebulaLoggerWrapper.Method.RUN_ERROR);
+        NebulaLoggerWrapper.log(NebulaLoggerWrapper.Method.RUN_ERROR);
         System.Assert.areEqual(NebulaLoggerWrapper.NEW_ENTRY, methodExecuted);
     }
 
     @isTest
     static void testRunException() {
-        TestUtility.ALLOW_LOGGING = true;
-        NebulaLoggerWrapper.logger = new CallableTestLogger();
-        NebulaLoggerWrapper.call(NebulaLoggerWrapper.Method.RUN_EXCEPTION);
-        System.Assert.areEqual(NebulaLoggerWrapper.NEW_ENTRY, methodExecuted);
+        try {
+            TestUtility.ALLOW_LOGGING = true;
+            NebulaLoggerWrapper.logger = new CallableTestLogger();
+            NebulaLoggerWrapper.log(
+                NebulaLoggerWrapper.Method.RUN_EXCEPTION,
+                EXCEPTION_MESSAGE,
+                NebulaLoggerWrapper.DataType.TYPE_EXCEPTION,
+                new TestUtility.GenericTestingException(EXCEPTION_MESSAGE)
+            );
+        } catch(TestUtility.GenericTestingException e) {
+            System.Assert.areEqual(EXCEPTION_MESSAGE, ((Exception)param).getMessage());
+            System.Assert.areEqual(NebulaLoggerWrapper.NEW_ENTRY, methodExecuted);
+            System.Assert.areEqual(EXCEPTION_MESSAGE, e.getMessage());
+        }
     }
 
     @isTest
     static void testRunSave() {
         TestUtility.ALLOW_LOGGING = true;
         NebulaLoggerWrapper.logger = new CallableTestLogger();
-        NebulaLoggerWrapper.call(NebulaLoggerWrapper.Method.RUN_SAVE);
+        NebulaLoggerWrapper.log(NebulaLoggerWrapper.Method.RUN_SAVE);
         System.Assert.areEqual(NebulaLoggerWrapper.SAVE_LOG, methodExecuted);
     }
 
     @isTest
-    static void testDataTypeString() {
+    static void testMessage() {
         TestUtility.ALLOW_LOGGING = true;
         NebulaLoggerWrapper.logger = new CallableTestLogger();
-        NebulaLoggerWrapper.call(
+        NebulaLoggerWrapper.log(NebulaLoggerWrapper.Method.RUN_INFO, EXCEPTION_MESSAGE);
+        System.Assert.areEqual(EXCEPTION_MESSAGE, message);
+    }
+
+    @isTest
+    static void testDataTypeList() {
+        TestUtility.ALLOW_LOGGING = true;
+        NebulaLoggerWrapper.logger = new CallableTestLogger();
+        NebulaLoggerWrapper.log(
             NebulaLoggerWrapper.Method.RUN_INFO,
-            NebulaLoggerWrapper.DataType.TYPE_STRING,
-            EXCEPTION_MESSAGE
+            EXCEPTION_MESSAGE,
+            NebulaLoggerWrapper.DataType.TYPE_LIST,
+            new List<String>{EXCEPTION_MESSAGE}
         );
-        System.Assert.areEqual(EXCEPTION_MESSAGE, param.toString());
+        System.Assert.areEqual(EXCEPTION_MESSAGE, ((List<String>)param)[0]);
     }
 
     @isTest
     static void testDataTypeException() {
         TestUtility.ALLOW_LOGGING = true;
         NebulaLoggerWrapper.logger = new CallableTestLogger();
-        NebulaLoggerWrapper.call(
+        NebulaLoggerWrapper.log(
             NebulaLoggerWrapper.Method.RUN_INFO,
+            null,
             NebulaLoggerWrapper.DataType.TYPE_EXCEPTION,
             new TestUtility.GenericTestingException(EXCEPTION_MESSAGE)
         );
@@ -82,7 +104,10 @@ private class NebulaLoggerWrapper_Test {
             methodExecuted = action;
             if (args != null) {
                 for (String key : args.keySet()) {
-                    if (key != NebulaLoggerWrapper.LOGGING_LEVEL_KEY) {
+                    if (key == NebulaLoggerWrapper.MESSAGE_KEY) {
+                        message = (String)args.get(key);
+                    } else if ((key == NebulaLoggerWrapper.DATA_TYPE_MAP.get(NebulaLoggerWrapper.DataType.TYPE_EXCEPTION)) ||
+                               (key == NebulaLoggerWrapper.DATA_TYPE_MAP.get(NebulaLoggerWrapper.DataType.TYPE_LIST))) {
                         param = args.get(key);
                     }
                 }
