update metadata code structure

--- a/force-app/main/default/classes/FieldChangeEventTriggerHandler.cls
+++ b/force-app/main/default/classes/FieldChangeEventTriggerHandler.cls
@@ -36,10 +36,10 @@ public class FieldChangeEventTriggerHandler extends TriggerHandler {
             // Create relation records
             List<SObject> relations = new List<SObject>();
             for (Field_Change__c fieldChange : fieldChanges) {
-                relations.add(FieldChangeRelationUtility.createFieldChangeRelation(
-                    FieldChangeRelationUtility.RELATION_METADATA_MAP.get(fieldChange.Object_Name__c).Relation_Object_Name__c,
+                relations.add(FieldChangeRelationMetadataUtility.createFieldChangeRelation(
+                    FieldChangeRelationMetadataUtility.RELATION_METADATA_MAP.get(fieldChange.Object_Name__c.toLowerCase()).Relation_Object_Name__c,
                     fieldChange.Id,
-                    FieldChangeRelationUtility.RELATION_METADATA_MAP.get(fieldChange.Object_Name__c).Changed_Object_Lookup_Field_Name__c,
+                    FieldChangeRelationMetadataUtility.RELATION_METADATA_MAP.get(fieldChange.Object_Name__c.toLowerCase()).Changed_Object_Lookup_Field_Name__c,
                     fieldChange.Changed_Record_Id__c
                 ));
             }
