--- a/force-app/main/default/classes/FieldChangeQueueable_Test.cls
+++ b/force-app/main/default/classes/FieldChangeQueueable_Test.cls
@@ -1,9 +1,22 @@
 @isTest
 private class FieldChangeQueueable_Test {
     private static final Integer BULK_AMOUNT = 249;
+
+    @isTest
+    static void testExecuteException() {
+        try {
+            TestUtility.THROW_TESTING_EXCEPTION = true;
+            Test.startTest();
+            FieldChangeQueueable fieldTracking = new FieldChangeQueueable('test', null, null);
+            fieldTracking.execute(null);
+            Test.stopTest();
+            throw new TestUtility.FailedTestingException('GenericTestingException was not thrown in execute');
+        } catch(TestUtility.GenericTestingException e) {}
+    }
     
     @isTest
     static void testSingleAccountEventPublish() {
+        TestMetadataFactory.createFieldChangeTrackingObjectsWithRelations();
         TestUtility.RUN_EVENT_TRIGGERS = false;
         TestDataFactory.DataFactoryBundle data = TestDataFactory.createMockChangedAccounts(1);
         Map<Id,Account> oldAccountsMap = new Map<Id,Account>();
@@ -15,13 +28,14 @@ private class FieldChangeQueueable_Test {
         System.enqueueJob(fieldTracking, 0);
         Test.stopTest();
         Integer eventCount = Integer.valueOf(TestUtility.globalVariablesValueMap.get(FieldChangeTestUtility.EVENT_COUNT_CUSTOM_SETTING_NAME));
-        System.assertEquals(FieldChangeTestUtility.TESTING_ACCOUNT_FIELD_METADATA_COUNT, eventCount,
+        System.assertEquals(TestMetadataFactory.TESTING_ACCOUNT_FIELD_CHANGE_METADATA_COUNT, eventCount,
                             'FieldChangeQueueable_Test.testBulkAccount failed: ' +
                             'incorrect number of Field_Change_Tracking_Event__e events created');
     }
     
     @isTest
     static void testBulkAccountsEventPublish() {
+        TestMetadataFactory.createFieldChangeTrackingObjectsWithRelations();
         TestUtility.RUN_EVENT_TRIGGERS = false;
         TestDataFactory.DataFactoryBundle data = TestDataFactory.createMockChangedAccounts(BULK_AMOUNT);
         Map<Id,Account> oldAccountsMap = new Map<Id,Account>();
@@ -35,13 +49,14 @@ private class FieldChangeQueueable_Test {
         System.enqueueJob(fieldTracking, 0);
         Test.stopTest();
         Integer eventCount = Integer.valueOf(TestUtility.globalVariablesValueMap.get(FieldChangeTestUtility.EVENT_COUNT_CUSTOM_SETTING_NAME));
-        System.assertEquals(BULK_AMOUNT * FieldChangeTestUtility.TESTING_ACCOUNT_FIELD_METADATA_COUNT, eventCount,
+        System.assertEquals(BULK_AMOUNT * TestMetadataFactory.TESTING_ACCOUNT_FIELD_CHANGE_METADATA_COUNT, eventCount,
                             'FieldChangeQueueable_Test.testBulkAccount failed: ' +
                             'incorrect number of Field_Change_Tracking_Event__e events created');
     }
     
     @isTest
     static void testSingleContactEventPublish() {
+        TestMetadataFactory.createFieldChangeTrackingObjectsWithRelations();
         TestUtility.RUN_EVENT_TRIGGERS = false;
         TestDataFactory.DataFactoryBundle data = TestDataFactory.createMockChangedContacts(1);
         Map<Id,Contact> oldContactsMap = new Map<Id,Contact>();
@@ -53,13 +68,14 @@ private class FieldChangeQueueable_Test {
         System.enqueueJob(fieldTracking, 0);
         Test.stopTest();
         Integer eventCount = Integer.valueOf(TestUtility.globalVariablesValueMap.get(FieldChangeTestUtility.EVENT_COUNT_CUSTOM_SETTING_NAME));
-        System.assertEquals(FieldChangeTestUtility.TESTING_CONTACT_FIELD_METADATA_COUNT, eventCount,
+        System.assertEquals(TestMetadataFactory.TESTING_CONTACT_FIELD_CHANGE_METADATA_COUNT, eventCount,
                             'FieldChangeQueueable_Test.testSingleContact failed: ' +
                             'incorrect number of Field_Change_Tracking_Event__e events created');
     }
     
     @isTest
     static void testBulkContactsEventPublish() {
+        TestMetadataFactory.createFieldChangeTrackingObjectsWithRelations();
         TestUtility.RUN_EVENT_TRIGGERS = false;
         TestDataFactory.DataFactoryBundle data = TestDataFactory.createMockChangedContacts(BULK_AMOUNT);
         Map<Id,Contact> oldContactsMap = new Map<Id,Contact>();
@@ -73,7 +89,7 @@ private class FieldChangeQueueable_Test {
         System.enqueueJob(fieldTracking, 0);
         Test.stopTest();
         Integer eventCount = Integer.valueOf(TestUtility.globalVariablesValueMap.get(FieldChangeTestUtility.EVENT_COUNT_CUSTOM_SETTING_NAME));
-        System.assertEquals(BULK_AMOUNT * FieldChangeTestUtility.TESTING_CONTACT_FIELD_METADATA_COUNT, eventCount,
+        System.assertEquals(BULK_AMOUNT * TestMetadataFactory.TESTING_CONTACT_FIELD_CHANGE_METADATA_COUNT, eventCount,
                             'FieldChangeQueueable_Test.testBulkContact failed: ' +
                             'incorrect number of Field_Change_Tracking_Event__e events created');
     }
